--- a/index.html
+++ b/index.html
@@ -8,29 +8,49 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
+        <button type="button" class="btn-settings" onclick="window.location.href='public/html/settings.html'">
+
+        </button>
+        <button type="button" class="btn-account" onclick="window.location.href='public/html/settings.html'">
+
+        </button>
+        <div class="logo">
+            LOGO
+        </div>
         <div class="main-home">
             <div class="main-header">
 
             </div>
-            <div class="button-person button-mentor">
-                <img >
-                <a href="public/html/mentors.html" class="button-person-font">Find a Mentor</a>
+            <div class="btn-mentor btn-person">
+                <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
+                <a href="public/html/mentors.html" class="btn-person-font">Find a Mentor</a>
             </div>
-            <div class="button-person">
-                <a href="public/html/account.html" class="button-person-font">Scott Klemmer</a>
+            <div class="btn-person">
+                <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
+                <a href="public/html/account.html" class="btn-person-font">Scott Klemmer</a>
             </div>
-            <div class="button-person">
-                <a href="public/html/account.html" class="button-person-font">Barack Obama</a>
+            <div class="btn-person">
+                <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
+                <a href="public/html/account.html" class="btn-person-font">Barack Obama</a>
             </div>
-            <div class="button-person">
-                <a href="public/html/account.html" class="button-person-font">Michael Jordan</a>
+            <div class="btn-person">
+                <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
+                <a href="public/html/account.html" class="btn-person-font">Michael Jordan</a>
             </div>
-            <div class="button-person">
-                <a href="public/html/account.html" class="button-person-font">Gary Gillespie</a>
+            <div class="btn-person">
+                <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
+                <a href="public/html/account.html" class="btn-person-font">Gary Gillespie</a>
             </div>
-            <div class="button-person">
-                <a href="public/html/account.html" class="button-person-font">John Smith</a>
+            <div class="btn-person">
+                <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
+                <a href="public/html/account.html" class="btn-person-font">John Smith</a>
             </div>
+            <div class="btn-home">
+                <a href="#">Home</a>
+            </div>
+        </div>
+        <div class="btn-home-msg">
+            <a href="public/html/main2.html">Messages</a>
         </div>
     </body>
     
