Connected account button to account page.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="logo">
                     LOGO
                 </div>
-                <button type="button" class="btn-account" onclick="window.location.href='public/html/settings.html'">
+                <button type="button" class="btn-account" onclick="window.location.href='public/html/account.html'">
         
                 </button>
             </div>
