--- a/public/html/account.html
+++ b/public/html/account.html
@@ -4,39 +4,41 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-        <link rel="stylesheet" href="public/css/primary.css">
+        <link rel="stylesheet" href="../css/primary.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class='container'>
         <div class="profile-home">
             <div class="btn-back">
-                <a href="index.html" class="btn-back-font">Back</a>
+                <a href="../../index.html" class="btn-back-font">Back</a>
             </div>
-            <h1>My Profile</h1>
-            <img src="1wi3t0TU_400x400.jpg" width="150"; height:="150">
+            <span id='profile-text'><h2>My Profile</h2></span>
+            <div class='profile-photo'>
+                <img src="1wi3t0TU_400x400.jpg" width="150"; height:="150">
+            </div>
             <div class="btn-changephoto">
                 <a href="public/images/mentors.html" class="btn-changephoto-font">Change Profile Photo</a>
-                <p>
-                    <br>
-                </p>
             </div>
-
-            <label class="switch">
-                <input id="cb" type="checkbox" style="float: left; margin-top: 5px;">
-                <div style="margin-right: 25px;">
-                    Discoverable as a Mentor
-                </div>
+            <br>
+            <div class='profile-switch'>
+                Discoverable as a Mentor
+                <input id="cb" type="checkbox">
                 <span class="slider round"></span>
-              </label>
-            <div style="margin-right: 25px;">
-                <br>
-                Name: John Smith
-                <br><br>
-                Main Type of Workout:
             </div>
-            <input type="radio" name="type" value="weight"> Weight<br>
-            <input type="radio" name="type" value="flexibility"> Flexibility<br>    
-            <input type="radio" name="type" value="cardio"> Cardio
+                <br>
+                <div class='profile-name'>
+                Name: John Smith
+                </div>
+                <br>
+                <div class='profile-workout'>
+                    Main Type of Workout:
+                    <br>
+                    <input type="radio" name="type" value="weight"> Weight<br>
+                    <input type="radio" name="type" value="flexibility"> Flexibility<br>    
+                    <input type="radio" name="type" value="cardio"> Cardio
+                </div>
+        </div>
         </div>
     </body>
 
